--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "postcss": "^8.5.6",
