--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
